--- a/pages/index.html
+++ b/pages/index.html
@@ -18,26 +18,38 @@
 </head>
 
 <body>
-<H2> Index</H2>
-  <ul class="grid"></ul>
 
-  <!-- THIS IS THE GADGET ABOUT THE PASSWORD -->
-  <form name="form" class="enter">
-    <input id="button" name="submit" style="display:none" />
-    <input id="texte" type='text' name='texte' value='⊙.☉' onkeypress="clickPress(event)" />
-  </form>
+  <body cz-shortcut-listen="true">
+    <h2> Index</h2>
+    <ul class="grid">
+      <li><a class="" href="/autre-temps">Autre temps</a></li>
+      <li><a class="" href="/bg">BG</a></li>
+      <li><a class="" href="/captcha">Captcha</a></li>
+      <li><a class="secret" href="/site-x-a">Site x A</a></li>
+      <li><a class="" href="/memoire">Mémoire</a></li>
+      <li><a class="" href="/mirror">Mirroir</a></li>
+      <li><a class="secret" href="/carta-para-dani">carta para dani</a></li>
+      <li><a class="" href="/cartography">cartography</a></li>
+      <li><a class="" href="/glace-sans-tain">glace sans tain</a></li>
+      <li><a class="secret" href="/juliettaytristan">julietta y tristan</a></li>
+      <li><a class="secret" href="/k&amp;p">k&amp;p</a></li>
+      <li><a class="" href="/lyrics">lyrics</a></li>
+      <li><a class="" href="/my-computer">my computer</a></li>
+      <li><a class="secret" href="/naia-x-pablo">naia x pablo</a></li>
+      <li><a class="" href="/poeme-mer">poeme mer</a></li>
+      <li><a class="" href="/sunday-sites">sunday sites</a></li>
+      <li><a class="" href="/sunsets">sunsets</a></li>
+      <li><a class="" href="/tott">tott</a></li>
+      <li><a class="" href="/twenty-six-hour-a-day">twenty six hour a day</a></li>
+      <li><a class="" href="/voeux2021">voeux 2021</a></li>
+      <li><a class="" href="/web-archive">web archive</a></li>
+      <li><a class="" href="/music">music</a></li>
+      <li><a class="" href="/lune">lune</a></li>
+      <li><a class="" href="/virtualisations">virtualisations</a></li>
+      <li><a class="" href="/presence">presence</a></li>
+      <li><a class="secret" href="/para-mateo">para mateo</a></li>
+    </ul>
 
-  <script id="script" src="assets/js/data.js"></script>
-  <script id="script" src="assets/js/script.js"></script>
-  <!-- <script id="script" src="../assets/js/thisColor.js"></script> -->
-
-  <audio id="sound" src="assets/sound.mp3" preload="auto"></audio>
-
-  <script>
-
-
-  </script>
-
-</body>
+  </body>
 
 </html>
