coulage du texte

--- a/memoire/template.html
+++ b/memoire/template.html
@@ -1,59 +1,8 @@
 <h1 id="1">𝐼. Des nouveaux mondes à bâtir</h1>
 
-<h2 id="1naissance">1a. La naissance d’Internet</h2>
+<h2 id="1-vierge">1b. Imaginer cet espace vierge</h2>
 
-<h3 id="1reseaux">Tout commence par les réseaux</h3>
-
-
-<section>
-    <p class="footnote-anchor" data-anchor="1"><span>Tandis que ce réseau grandissant (13 nœuds en 1971,
-            111
-            en 1977)
-            était validé et utilisé
-            expérimentalement parmi ces chercheurs en sciences informatiques, d’autres réseaux et
-            technologies
-            de
-            liaisons étaient recherchées. L’utilité des réseaux informatiques – en particulier le
-            courrier
-            électronique – n’avait pas échappé aux autres communautés et disciplines, de sorte qu’au
-            milieu
-            des
-            années 70, des réseaux alternatifs commencèrent à surgir:</span> <sup>1</sup></p>
-
-    <div class="footnote" data-footnote="1">
-        <img src="images/arpanet1974.png">
-        <span><sup>1</sup> Sites des États-Unis reliés à ARPANET en 1974
-            (https://fr.wikipedia.org/wiki/ARPANET)</span>
-    </div>
-</section>
-
-<section>
-    <p class="citation footnote-anchor" data-anchor="2"><span>« plutôt que d’installer l’intelligence au
-            cœur du
-            réseau, il faut la situer aux
-            extrémités : les ordinateurs au sein du réseau n’ont à exécuter que les fonctions très
-            simples
-            qui
-            sont
-            nécessaires pour les applications les plus diverses, alors que les fonctions qui sont
-            requises
-            par
-            certaines applications spécifiques seulement doivent être exécutées en bordure de réseau.
-            Ainsi,
-            la
-            complexité et l’intelligence du réseau sont repoussées vers ses lisières. Des réseaux
-            simples
-            pour
-            des
-            applications intelligentes. »</span> <sup>2</sup></p>
-
-    <div class="footnote" data-footnote="2">
-        <span><sup>2</sup> Lawrence Lessig, «L'Avenir des idées», Presses
-            universitaires de Lyon, 2005. Paragraphe 75 sur la version en ligne:
-            [https://books.openedition.org/pul/31007]</span>
-    </div>
-</section>
-
+<h3 id="1-visions">Quels visions pour les réseaux et Internet?</h3>
 
 <ul>
     <li>ce sera un réseau pour la recherche en général, et non silotée comme on avait pu le voir
@@ -67,18 +16,12 @@
 </ul>
 
 
-
-
-
-
 <section>
-    <span class="footnote-anchor" data-anchor="1"><span> (13 nœuds en 1971,
-            111
-            en 1977)</span><sup>1</sup></span>
+    <span class="footnote-anchor" data-anchor="3"><span> Ce projet sera vu comme une préfiguration sur papier du futur Internet.</span><sup>3</sup></span>
 
-    <div class="footnote" data-footnote="1">
-        <img src="images/arpanet1974.png">
-        <span><sup>1</sup> Sites des États-Unis reliés à ARPANET en 1974
-            (https://fr.wikipedia.org/wiki/ARPANET)</span>
-    </div>
+        <div class="footnote" data-footnote="3">
+            <span><sup>3</sup> Dominique Cardon, «Culture Numérique» Paris: Presses de Sciences Po,
+                2019.
+                p50</span>
+        </div>
 </section>
